Adding egress rules and hprop prefix for headers

--- a/k8s/istio/route-rule.yaml
+++ b/k8s/istio/route-rule.yaml
@@ -10,7 +10,7 @@ spec:
   match:
     request:
       headers:
-        shipper:
+        hprop-shipper:
           regex: v1
   route:
   - labels:
@@ -28,7 +28,7 @@ spec:
   match:
     request:
       headers:
-        shipper:
+        hprop-shipper:
           regex: v2
   route:
   - labels:
